--- a/index.html
+++ b/index.html
@@ -19,22 +19,11 @@
         <app-button>Submit</app-button>
         <app-button>Click Me</app-button>
     </div>
-    <script>
+    <script type="module">
+        import AppButton from './js/components/AppButton.js';
         const app = Vue.createApp({
             components: {
-                'app-button': {
-                    template: `
-                        <button class="bg-blue-500 hover:bg-blue-700 text-white px-4 py-2 rounded disabled:opacity-50 disabled:cursor-not-allowed" :disabled="isLoading">
-                            <slot></slot>
-                        </button>
-                    `,
-
-                    data() {
-                        return {
-                            isLoading: true
-                        }
-                    }
-                }
+                'app-button': AppButton
             },
         });
         app.mount('#app');
