--- a/index.html
+++ b/index.html
@@ -16,17 +16,16 @@
 
     <!-- deklarasi app vue -->
     <div id="app">
-        <app-button>Submit</app-button>
-        <app-button>Click Me</app-button>
+        <app-button isloading="true">Submit</app-button>
+        <app-button type="secondary">Click Me</app-button>
+        <app-button type="success">Click Me</app-button>
+        <app-button type="danger">Click Me</app-button>
+        <app-button type="warning" isloading="true">Click Me</app-button>
     </div>
+
     <script type="module">
-        import AppButton from './js/components/AppButton.js';
-        const app = Vue.createApp({
-            components: {
-                'app-button': AppButton
-            },
-        });
-        app.mount('#app');
+        import App from './js/components/App.js';
+        Vue.createApp(App).mount('#app');
     </script>
 </body>
 </html>
