Episode 8 : Belajar push data ke array pake form

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 <body>
     
 
-    <!-- deklarasi app vue -->
-    <div id="app">
+    <!-- deklarasi app vue --> 
+    <div id="app" class="container mx-auto p-4">
         
     </div>
 
